@@ -142,5 +142,6 @@ AC_OUTPUT([
 Makefile
 audio/Makefile
 video/Makefile
+smpeg-config
 smpeg.spec
 ])
